# StayVacay-Backend

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-backend.yaml  entrypoint.sh  loaddata.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 33aa0e51df5f_first_migraion.py  4c1677be4161_add_new_fields.py
app/: database.py  db.py  loaddata.py  main.py
app/core/: config.py  schemas.py  shemas.py
app/core/endpoints/: place.py
