[tool.poetry]
name = "stayvacay-backend"
version = "0.1.0"
description = ""
authors = ["gmoroz <12345hasek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
databases = {extras = ["postgresql"], version = "^0.7.0"}
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
psycopg2-binary = "^2.9.5"
pre-commit = "^3.0.4"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
